<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/logo_padding_bottom"
            android:paddingTop="@dimen/logo_padding_top"
            android:text="@string/logo_text"
            android:textColor="@color/logo_color"
            android:textSize="@dimen/logo_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/description_padding_bottom"
            android:text="@string/description_text"
            android:textColor="@color/white_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:scaleType="fitXY"
                android:src="@drawable/hero" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/star_background_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@color/star_background_color"
                android:orientation="horizontal"
                android:padding="@dimen/star_background_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/halfstar" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="@dimen/padding_left"
            android:paddingTop="@dimen/padding_top"
            android:text="Gill &amp; Hock"
            android:textColor="@color/textWhite"
            android:textSize="20sp" />

        <View
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:background="@color/colorAccent">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left"
            android:paddingTop="@dimen/padding_top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/icon_padding_right"
                android:src="@drawable/directions" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="map"
                android:text="@string/address"
                android:textColor="@color/black_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left"
            android:paddingTop="@dimen/padding_top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/icon_padding_right"
                android:src="@drawable/openinghours" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opening_hours"
                android:textColor="@color/black_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left"
            android:paddingTop="@dimen/padding_top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/icon_padding_right"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/phone_number"
                android:textColor="@color/black_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left"
            android:paddingTop="@dimen/padding_top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/icon_padding_right"
                android:src="@drawable/globe" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/website"
                android:textColor="@color/black_text" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/star_background_color"
            android:gravity="bottom"
            android:text="@string/footer"
            android:textAlignment="center"
            android:textColor="@color/black_text" />
    </LinearLayout>


</ScrollView>
